@@ -1,12 +1,12 @@
 package name.remal.gradle_plugins.toolkit;
 
-import static java.util.stream.Collectors.toUnmodifiableList;
+import static java.util.stream.Collectors.toList;
 import static org.assertj.core.api.Assertions.assertThat;
 
+import com.google.common.collect.ImmutableList;
+import com.google.common.collect.ImmutableMap;
+import com.google.common.collect.ImmutableSet;
 import java.util.Collection;
-import java.util.List;
-import java.util.Map;
-import java.util.Set;
 import java.util.concurrent.atomic.AtomicBoolean;
 import lombok.Data;
 import lombok.Value;
@@ -35,15 +35,15 @@ class OrderedActionsTaskExtensionImplTest {
         val mutableAction = new MutableAction();
         mutableAction.setId("1");
         mutableAction.setStage(1);
-        mutableAction.setShouldBeExecutedAfter(List.of("0"));
-        mutableAction.setShouldBeExecutedBefore(List.of("2"));
+        mutableAction.setShouldBeExecutedAfter(ImmutableList.of("0"));
+        mutableAction.setShouldBeExecutedBefore(ImmutableList.of("2"));
 
         val frozenAction = OrderedActionsTaskExtensionImpl.freezeAction(mutableAction);
 
         mutableAction.setId("10");
         mutableAction.setStage(10);
-        mutableAction.setShouldBeExecutedAfter(List.of("00"));
-        mutableAction.setShouldBeExecutedBefore(List.of("20"));
+        mutableAction.setShouldBeExecutedAfter(ImmutableList.of("00"));
+        mutableAction.setShouldBeExecutedBefore(ImmutableList.of("20"));
 
         assertThat(frozenAction.getId()).isEqualTo("1");
         assertThat(frozenAction.getStage()).isEqualTo(1);
@@ -69,18 +69,18 @@ class OrderedActionsTaskExtensionImplTest {
             }
         }
 
-        val actions = List.of(
-            new OrderedActionImpl("4", List.of(), List.of()),
-            new OrderedActionImpl("3", List.of("2", "1"), List.of("4")),
-            new OrderedActionImpl("1", List.of(), List.of()),
-            new OrderedActionImpl("2", List.of("1"), List.of())
+        val actions = ImmutableList.of(
+            new OrderedActionImpl("4", ImmutableList.of(), ImmutableList.of()),
+            new OrderedActionImpl("3", ImmutableList.of("2", "1"), ImmutableList.of("4")),
+            new OrderedActionImpl("1", ImmutableList.of(), ImmutableList.of()),
+            new OrderedActionImpl("2", ImmutableList.of("1"), ImmutableList.of())
         );
 
         val dependenciesMap = OrderedActionsTaskExtensionImpl.getDependenciesMap(actions);
-        assertThat(dependenciesMap).containsExactlyInAnyOrderEntriesOf(Map.of(
-            "4", Set.of("3"),
-            "3", Set.of("2", "1"),
-            "2", Set.of("1")
+        assertThat(dependenciesMap).containsExactlyInAnyOrderEntriesOf(ImmutableMap.of(
+            "4", ImmutableSet.of("3"),
+            "3", ImmutableSet.of("2", "1"),
+            "2", ImmutableSet.of("1")
         ));
     }
 
@@ -98,20 +98,20 @@ class OrderedActionsTaskExtensionImplTest {
             }
         }
 
-        val actions = List.of(
-            new OrderedActionImpl("0", List.of(), List.of()),
-            new OrderedActionImpl("5", List.of("4"), List.of()),
-            new OrderedActionImpl("4", List.of(), List.of()),
-            new OrderedActionImpl("1", List.of(), List.of("4")),
-            new OrderedActionImpl("3", List.of("2", "1"), List.of("4")),
-            new OrderedActionImpl("2", List.of("1"), List.of()),
-            new OrderedActionImpl("6", List.of(), List.of())
+        val actions = ImmutableList.of(
+            new OrderedActionImpl("0", ImmutableList.of(), ImmutableList.of()),
+            new OrderedActionImpl("5", ImmutableList.of("4"), ImmutableList.of()),
+            new OrderedActionImpl("4", ImmutableList.of(), ImmutableList.of()),
+            new OrderedActionImpl("1", ImmutableList.of(), ImmutableList.of("4")),
+            new OrderedActionImpl("3", ImmutableList.of("2", "1"), ImmutableList.of("4")),
+            new OrderedActionImpl("2", ImmutableList.of("1"), ImmutableList.of()),
+            new OrderedActionImpl("6", ImmutableList.of(), ImmutableList.of())
         );
 
         val sortedActions = OrderedActionsTaskExtensionImpl.sortStagedActions(actions);
         val sortedIds = sortedActions.stream()
             .map(OrderedAction::getId)
-            .collect(toUnmodifiableList());
+            .collect(toList());
         assertThat(sortedIds).containsExactly("0", "1", "2", "3", "4", "5", "6");
     }
 
